C3: Arreglos finales